Fix bugs in tool calling for OCI generative AI Llama models (#19376)
* Fix bugs in tool calling in chat

* Fix bugs and package version

--- a/docs/docs/examples/llm/oci_genai.ipynb
+++ b/docs/docs/examples/llm/oci_genai.ipynb
@@ -413,6 +413,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ea4b58c3",
+   "metadata": {},
+   "source": [
+    "Use chat_with_tools for tool calling."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5546c661",
@@ -445,6 +453,59 @@
     "response = llm.chat_with_tools(\n",
     "    tools=[add_tool, multiply_tool],\n",
     "    user_msg=\"What is 3 * 12? Also, what is 11 + 49?\",\n",
+    "    allow_parallel_tool_calls=True,\n",
+    ")\n",
+    "\n",
+    "print(response)\n",
+    "tool_calls = response.message.additional_kwargs.get(\"tool_calls\", [])\n",
+    "print(tool_calls)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63702c0e",
+   "metadata": {},
+   "source": [
+    "Use chat for tool calling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "637eaeef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.llms.oci_genai import OCIGenAI\n",
+    "from llama_index.core.llms import ChatMessage, MessageRole\n",
+    "\n",
+    "llm = OCIGenAI(\n",
+    "    model=\"MY_MODEL\",\n",
+    "    service_endpoint=\"https://inference.generativeai.us-chicago-1.oci.oraclecloud.com\",\n",
+    "    compartment_id=\"MY_OCID\",\n",
+    ")\n",
+    "\n",
+    "\n",
+    "def multiply(a: int, b: int) -> int:\n",
+    "    \"\"\"Multiple two integers and returns the result integer\"\"\"\n",
+    "    return a * b\n",
+    "\n",
+    "\n",
+    "def add(a: int, b: int) -> int:\n",
+    "    \"\"\"Addition function on two integers.\"\"\"\n",
+    "    return a + b\n",
+    "\n",
+    "\n",
+    "add_tool = FunctionTool.from_defaults(fn=add)\n",
+    "multiply_tool = FunctionTool.from_defaults(fn=multiply)\n",
+    "\n",
+    "user_msg = ChatMessage(\n",
+    "    role=MessageRole.USER, content=\"What is 3 * 12? Also, what is 11 + 49?\"\n",
+    ")\n",
+    "\n",
+    "response = llm.chat(\n",
+    "    messages=[user_msg],\n",
+    "    tools=[multiply_tool, add_tool],\n",
     ")\n",
     "\n",
     "print(response)\n",
